syntax = "proto3";

import "google/protobuf/any.proto";

package keboola.storageDriver.command.common;

/**
 * Generic request used to trigger driver action
 */
message DriverRequest {
  google.protobuf.Any credentials = 1; // credentials needed to connect into backend
  google.protobuf.Any command = 2; // command object used for actions
  repeated string features = 3; // list of features which could be processed by backend
  string backend = 4; // name of the backend, this is used to create queue name in temporal
}

message DriverResponse {
  google.protobuf.Any response = 1;
}

message TerminateSessionCommand {
  string sessionId = 1;
}
